--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "tailwindcss-animate": "^1.0.7",
     "tone": "^15.1.22",
     "vaul": "^1.1.2",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "nexusui": "^2.1.6",
+    "react-nexusui": "^0.1.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
